--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "if-env": "^1.0.4",
     "node-fetch": "^2.6.1",
     "path": "^0.12.7",
-    "react-bootstrap": "^1.6.1"
+    "react-bootstrap": "^1.6.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
